ruby-pygments.rb (0.6.3-2) unstable; urgency=medium

  * Team upload
  * Remove version in the gem2deb build-dependency
  * Use https:// in Vcs-* fields
  * Run wrap-and-sort on packaging files
  * Add patch to work with pygments 2.1+ (Closes: #830400)
  * Bump Standards-Version to 3.9.8
  * Set Testsuite to autopkgtest-pkg-ruby

 -- Cédric Boutillier <boutil@debian.org>  Fri, 08 Jul 2016 13:49:11 +0200

ruby-pygments.rb (0.6.3-1) unstable; urgency=medium

  * Team upload
  * Imported Upstream version 0.6.3
  * Fix watch file to not use githubredir anymore
  * Bump Standards-Version to 3.9.7
  * Use https in Vcs-* fields
  * Refresh patches
  * Adapt pygments tests to new version (Closes: #812940)

 -- Cédric Boutillier <boutil@debian.org>  Tue, 01 Mar 2016 18:28:48 +0100

ruby-pygments.rb (0.5.4~ds1-3) unstable; urgency=medium

  * Team upload.
  * Reverted the previous upload completely, and acknowledged the NMU in
    0.5.4~ds1-1.1 by Tomasz Buchert (Closes: #768615).
  * Update debian/patches/0007-Update-test-result.patch to fix current FTBFS
    (and properly Closes: #775631).

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 07 Feb 2015 13:17:48 -0200

ruby-pygments.rb (0.5.4~ds1-2) unstable; urgency=medium

  * Team upload
  * fix tests (Closes: #775631):
    - test_highlight_works_with_larger_files: instead of testing for an exact
      amount of bytes, pass with there are more than 400,000 of them.
      (debian/patches/0007-Update-test-result.patch)
    - test_highlight_works_with_single_character_input: removed, since the
      underlying Python code does not support that use case.
      (debian/patches/0008-Drop-unfeasible-test.patch)

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 04 Feb 2015 19:43:57 -0200

ruby-pygments.rb (0.5.4~ds1-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Update the testsuite (Closes: #768615)

 -- Tomasz Buchert <tomasz.buchert@inria.fr>  Sat, 22 Nov 2014 15:18:14 +0100
